--- a/H1EmuLauncher/SettingsPages/About.xaml
+++ b/H1EmuLauncher/SettingsPages/About.xaml
@@ -140,7 +140,7 @@
                     <LineBreak/>
         
                     <Run Foreground="FloralWhite"
-                         Text="• Arrcy • Booze • Dave • rob318us • SONNY •"/>
+                         Text="• Arrcy • Dave • rob318us • SONNY •"/>
 
                     <LineBreak/>
                     <LineBreak/>
