--- a/H1EmuLauncher/Language/StringResources.en-EN.xaml
+++ b/H1EmuLauncher/Language/StringResources.en-EN.xaml
@@ -20,7 +20,7 @@
     <system:String x:Key="item19">Please make sure to fill in the Auth Code box.</system:String>
     <system:String x:Key="item21">Got depot key for {0} result: {1}</system:String>
     <system:String x:Key="item23">Download complete!</system:String>
-    <system:String x:Key="item24">Need to download a different version? Press the button below to login again!</system:String>
+    <system:String x:Key="item24">Need to download the game again? Press the button below to login again!</system:String>
     <system:String x:Key="item25">LOGIN</system:String>
     <system:String x:Key="item26">Currently downloading:</system:String>
     <system:String x:Key="item27">version</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe is currently being used.\n\nPlease close any open instances of H1Z1.\n\nYou can use the button below to kill all processes of H1Z1.</system:String>
     <system:String x:Key="item122">Current Game Version:</system:String>
     <system:String x:Key="item124">Launcher version</system:String>
-    <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
+    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
     <system:String x:Key="item127">Developers</system:String>
     <system:String x:Key="item128">Administrators</system:String>
