--- a/H1EmuLauncher/Language/StringResources.pl-PL.xaml
+++ b/H1EmuLauncher/Language/StringResources.pl-PL.xaml
@@ -20,7 +20,7 @@
     <system:String x:Key="item19">Pamiętaj, aby wypełnić pole Kod autoryzacji.</system:String>
     <system:String x:Key="item21">Otrzymano klucz: {1} dla {0}</system:String>
     <system:String x:Key="item23">Pobieranie zakończone!</system:String>
-    <system:String x:Key="item24">Chcesz pobrać inną wersję? Użyj przycisku poniżej, aby zalogować się ponownie!</system:String>
+    <system:String x:Key="item24">Chcesz pobrać grę ponownie? Użyj przycisku poniżej, aby zalogować się ponownie!</system:String>
     <system:String x:Key="item25">LOGIN</system:String>
     <system:String x:Key="item26">Aktualne pobieranie:</system:String>
     <system:String x:Key="item27">wersja</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe jest aktualnie uruchomiony.\n\nZamknij wszystkie otwarte instancje H1Z1.\n\nMożesz użyć poniższego przycisku, aby zabić wszystkie procesy H1Z1.</system:String>
     <system:String x:Key="item122">Aktualna wersja gry:</system:String>
     <system:String x:Key="item124">Wersja launchera</system:String>
-    <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
+    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
     <system:String x:Key="item126">Lead Development</system:String>
     <system:String x:Key="item127">Deweloperzy</system:String>
     <system:String x:Key="item128">Administrators</system:String>
