--- a/H1EmuLauncher/Language/StringResources.pt-PT.xaml
+++ b/H1EmuLauncher/Language/StringResources.pt-PT.xaml
@@ -20,7 +20,7 @@
     <system:String x:Key="item19">Certifique-se de preencher a caixa Auth Code.</system:String>
     <system:String x:Key="item21">Chave de depósito para {0} resultado: {1}</system:String>
     <system:String x:Key="item23">Download completo!</system:String>
-    <system:String x:Key="item24">Precisa de descarregar outra versão? Prima o botão abaixo para iniciar novamente a sessão!</system:String>
+    <system:String x:Key="item24">Precisa baixar o jogo novamente? Prima o botão abaixo para iniciar novamente a sessão!</system:String>
     <system:String x:Key="item25">Iniciar Sessão</system:String>
     <system:String x:Key="item26">Download a decorrer:</system:String>
     <system:String x:Key="item27">versão</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe está a ser usado.\n\nFeche todas as instâncias abertas de H1Z1.\n\nVocê pode usar o botão abaixo para matar todos os processos de H1Z1.</system:String>
     <system:String x:Key="item122">Versão atual do jogo:</system:String>
     <system:String x:Key="item124">Launcher version</system:String>
-    <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
+    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
     <system:String x:Key="item126">Desenvolvedor Principal</system:String>
     <system:String x:Key="item127">Desenvolvedores</system:String>
     <system:String x:Key="item128">Administradores</system:String>
