--- a/H1EmuLauncher/Language/StringResources.ru-RU.xaml
+++ b/H1EmuLauncher/Language/StringResources.ru-RU.xaml
@@ -20,7 +20,7 @@
     <system:String x:Key="item19">Обязательно заполните поле Код авторизации.</system:String>
     <system:String x:Key="item21">Получен depot key для {0} результат: {1}</system:String>
     <system:String x:Key="item23">Загрузка завершена!</system:String>
-    <system:String x:Key="item24">Нужно скачать другую версию? Нажмите кнопку ниже, чтобы снова войти в систему!</system:String>
+    <system:String x:Key="item24">Нужно скачать игру еще раз? Нажмите кнопку ниже, чтобы снова войти в систему!</system:String>
     <system:String x:Key="item25">ВХОД</system:String>
     <system:String x:Key="item26">Загружается:</system:String>
     <system:String x:Key="item27">версия</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1.exe в настоящее время используется.\n\nПожалуйста, закройте все открытые экземпляры H1Z1.\n\nВы можете использовать кнопку ниже, чтобы убить все процессы H1Z1.</system:String>
     <system:String x:Key="item122">Текущая версия игры:</system:String>
     <system:String x:Key="item124">Версия лаунчера</system:String>
-    <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
+    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
     <system:String x:Key="item126">Ведущая разработка</system:String>
     <system:String x:Key="item127">Разработчики</system:String>
     <system:String x:Key="item128">Администраторы</system:String>
