--- a/H1EmuLauncher/Language/StringResources.zh-cn.xaml
+++ b/H1EmuLauncher/Language/StringResources.zh-cn.xaml
@@ -20,7 +20,7 @@
     <system:String x:Key="item19">请务必填写授权码框。</system:String>
     <system:String x:Key="item21">获取数据包密钥 {0} 结果：{1}</system:String>
     <system:String x:Key="item23">下载完成！</system:String>
-    <system:String x:Key="item24">需要下载其他版本吗？按下面的登录按钮返回Steam登录界面！</system:String>
+    <system:String x:Key="item24">需要重新下载游戏吗？按下面的登录按钮返回Steam登录界面！</system:String>
     <system:String x:Key="item25">登录</system:String>
     <system:String x:Key="item26">当前正在下载：</system:String>
     <system:String x:Key="item27">版本</system:String>
@@ -103,7 +103,7 @@
     <system:String x:Key="item121">H1Z1游戏已经启动。\n\n请关闭所有打开的 H1Z1 实例。\n\n您可以使用下面的按钮来杀死 H1Z1 的所有进程。</system:String>
     <system:String x:Key="item122">当前游戏版本：</system:String>
     <system:String x:Key="item124">启动器版本</system:String>
-    <system:String x:Key="item125">Copyright © 2023 | H1Emu Project</system:String>
+    <system:String x:Key="item125">Copyright © 2024 | H1Emu Project</system:String>
     <system:String x:Key="item126">领导开发</system:String>
     <system:String x:Key="item127">开发商</system:String>
     <system:String x:Key="item128">管理员</system:String>
