--- a/H1EmuLauncher/Windows/LauncherWindow.xaml
+++ b/H1EmuLauncher/Windows/LauncherWindow.xaml
@@ -523,7 +523,6 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="auto"/>
                                 <RowDefinition Height="*"/>
-                                <RowDefinition Height="auto"/>
                                 <RowDefinition Height="40"/>
                             </Grid.RowDefinitions>
                             
@@ -603,6 +602,12 @@
                             <Grid Grid.Row="2"
                                   Margin="10,0,30,0">
 
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition Height="auto"/>
+                                    <RowDefinition Height="10"/>
+                                    <RowDefinition Height="auto"/>
+                                </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
@@ -612,7 +617,7 @@
                                 <Border Height="1"
                                         Background="#FFCA1420"
                                         VerticalAlignment="Top"
-                                        Margin="10,0,30,0"
+                                        Margin="10,0,10,0"
                                         CornerRadius="20"
                                         Grid.ColumnSpan="2"
                                         RenderOptions.BitmapScalingMode="Fant">
@@ -627,8 +632,86 @@
                                     </Border.Effect>
                                 </Border>
 
+                                <!-- Grid containing game directory and icons/buttons -->
+                                <Grid Grid.ColumnSpan="2"
+                                      Grid.Row="1">
+
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="20"/>
+                                        <RowDefinition Height="auto"/>
+                                        <RowDefinition Height="15"/>
+                                        <RowDefinition Height="*"/>
+                                    </Grid.RowDefinitions>
+
+                                    <!-- Game directory textbox -->
+                                    <TextBox x:Name="directoryBox"
+                                             Grid.Column="1"
+                                             Grid.Row="1"
+                                             Height="35"
+                                             Padding="32,7,32,0"
+                                             IsReadOnly="True"
+                                             Cursor="Arrow"
+                                             Style="{DynamicResource TextBoxPrimaryStyle}">
+
+                                        <TextBox.Effect>
+
+                                            <!-- Drop shadow effect -->
+                                            <DropShadowEffect BlurRadius="15"
+                                                              Direction="-90"
+                                                              RenderingBias="Quality"
+                                                              ShadowDepth="1"
+                                                              Opacity="0.3"/>
+                                        </TextBox.Effect>
+                                    </TextBox>
+
+                                    <!-- Button to open file explorer to game directory -->
+                                    <Button Grid.Column="1"
+                                            Grid.Row="1"
+                                            Click="OpenDirectory"
+                                            RenderOptions.BitmapScalingMode="Fant"
+                                            Width="18"
+                                            Height="18"
+                                            Margin="10,0,0,0"
+                                            HorizontalAlignment="Left"
+                                            BorderThickness="0"
+                                            Style="{DynamicResource FolderButton}">
+
+                                        <Button.Background>
+                                            <ImageBrush ImageSource="..\Resources\Folder.png" Stretch="Uniform"/>
+                                        </Button.Background>
+                                    </Button>
+
+                                    <!-- Button to select a new game directory -->
+                                    <Button x:Name="directoryButton"
+                                            Grid.Column="1"
+                                            Grid.Row="1"
+                                            Click="SelectDirectory"
+                                            RenderOptions.BitmapScalingMode="Fant"
+                                            Width="18"
+                                            Height="18"
+                                            Margin="0,0,10,0"
+                                            HorizontalAlignment="Right"
+                                            BorderThickness="0"
+                                            Style="{DynamicResource EnterButton}">
+
+                                        <Button.Background>
+                                            <ImageBrush ImageSource="..\Resources\Arrow.png" Stretch="Uniform"/>
+                                        </Button.Background>
+                                    </Button>
+
+                                    <!-- Current detected game version -->
+                                    <TextBlock x:Name="currentGame"
+                                               Grid.Row="3"
+                                               Foreground="Gray"
+                                               FontFamily="Bahnschrift"
+                                               FontWeight="Bold"
+                                               FontSize="15"
+                                               HorizontalAlignment="Center"/>
+                                </Grid>
+
                                 <!-- Server selector combobox -->
                                 <ComboBox x:Name="serverSelector"
+                                          Grid.Row="3"
                                           Height="35"
                                           Margin="0,20,10,20"
                                           Padding="38,2,5,0"
@@ -666,7 +749,8 @@
                                 </ComboBox>
 
                                 <!-- Server selector icon -->
-                                <Image Source="..\Resources\Server.png"
+                                <Image Grid.Row="3"
+                                       Source="..\Resources\Server.png"
                                        Stretch="Uniform"
                                        RenderOptions.BitmapScalingMode="Fant"
                                        Width="20"
@@ -678,6 +762,7 @@
 
                                 <!-- Play button -->
                                 <Button x:Name="playButton"
+                                        Grid.Row="3"
                                         Grid.Column="1"
                                         Click="LaunchClient"
                                         RenderOptions.BitmapScalingMode="Fant"
