add Candles to financial contributors

--- a/H1EmuLauncher/SettingsPages/About.xaml
+++ b/H1EmuLauncher/SettingsPages/About.xaml
@@ -157,7 +157,7 @@
                     <LineBreak/>
         
                     <Run Foreground="FloralWhite"
-                         Text="• Booze • Mahoaga • TimmyFPS • LegalViewbot • remapz • Christer D • A Mad Midget • Twin • piapiacrack • AlvaZhang • RensareN • willow •"/>
+                         Text="• Booze • Mahoaga • TimmyFPS • LegalViewbot • remapz • Christer D • A Mad Midget • Twin • piapiacrack • AlvaZhang • RensareN • willow • Candles •"/>
 
                     <LineBreak/>
                     <LineBreak/>
